0.4.2 - currently working on
- [#2240] Change: Speed up templatehelper::createRecursivePageList
- [#2238] Fix: Make our unit tests work with the page tree cache
- [#2123] Fix: Huge memory consumption through createFakeFrontend()
- [#1901] Feature: Use more SQL indices
- [#2188] Feature: Create a mapper for models
- [#2187] Feature: Create a model class
- [#2097] Feature: Create a class tx_oelib_db
- [#2211] Fix: The tests for createRecursivePageList must not rely on the sorting
- [#1909] Feature: Add functions "existsRecord", "existsRecordWithUid" and "existsExactlyOneRecord"
- [#2185] Feature: Create an object class
- [#2183] Fix: tx_oelib_templatehelper::init() differs from tx_seminars_templatehelper()
- [#2178] Feature: Add methods hideSubpartsArray and unhideSubpartsArray to tx_oelib_templatehelper
- [#2179] Fix: Unit test failure: tx_oelib_templatehelperchild_testcase::testEnableFieldsCanBeDifferentForDifferentVersionParameters
- [#2161] Fix: Oelib produces SQL error in User -> Workspace
- [#1778] Feature: Provide an abstraction for session handling
- [#1137] Change: Change =& new to = new and remove the & from before function names
- [#2152] Change: Skip locale config check tests in Windows
- [#2151] Fix: tx_oelib_templatehelper::getSubpartForCallback has to be protected in PHP 5.3
- [#2130] Change: countRecords should only find dummy records
- [#2098] Change: Make securePiVars set non-existent piVars to secure to zero
- [#2106] Fix: createDummyFolder() does not work on certain folder names
- [#1219] Feature: Add an id attribute to templatehelper::createRestrictedImage
- [#2121] Change: Rename "Oliver's Extension Library" to "One is Enough Library"
- [#2093] Change: Allow creating fake front ends without adding a record to the pages table
- [#1840] Change: Add basic unit tests for templatehelper::createRestrictedImage
- [#1915] Feature: Add a function createFakeFrontEnd to the testing framework